Fix site logo vertical alignment; adjust transform property for improved display

--- a/_sass/layout/_masthead.scss
+++ b/_sass/layout/_masthead.scss
@@ -85,7 +85,7 @@
     width: auto;
     vertical-align: middle;
     display: inline-block;
-    transform: translateY(0px);
+    transform: translateY(-1px);
 
     // For screens smaller than medium
     @include breakpoint(max-width $medium) {
